<resources>
    <string name="app_name" translatable="false">EsgiGames</string>
    <!-- LOGIN ACTIVITY -->
    <string name="welcome">Welcome !</string>
    <string name="login_message">Please login or create a new account to use the application</string>
    <string name="login_empty_string_error_message">Email or password field cannot be empty</string>
    <string name="login_failed_message">Authentication failed, please check your credentials or network and try again</string>
    <string name="email_field">E-Mail</string>
    <string name="password_field">Password</string>
    <string name="login_btn">Login</string>
    <string name="goto_signin">New account</string>
    <string name="password_forgot"> <u>Forgot password</u></string>
    <!-- LOGIN ACTIVITY -->

    <!-- REGISTER ACTIVITY -->
    <string name="register">Registration</string>
    <string name="register_message">Please enter these different information, so that your lists are saved</string>
    <string name="password_mismatch">Passwords are not matching, please try again</string>
    <string name="register_empty_string_error_message">Email, username or password field cannot be empty</string>
    <string name="username_field">Username</string>
    <string name="email_field_register">E-Mail</string>
    <string name="password_field_register">Password</string>
    <string name="confirm_password_field">Confirm password</string>
    <string name="register_btn">Register</string>
    <!-- REGISTER ACTIVITY -->

    <!-- FORGOT PASSWORD ACTIVITY -->
    <string name="forgot_password">Forgot your password</string>
    <string name="forgot_password_message">Please enter your email to reset your password</string>
    <string name="forgot_password_empty_email">Email field can\'t be empty</string>
    <string name="forgot_error_message">Please check email address or internet connexion and try again</string>
    <string name="email_field_forgot_password">E-Mail</string>
    <string name="forgot_password_btn">Resend my password</string>
    <!-- FORGOT PASSWORD ACTIVITY -->

    <!-- HOME ACTIVITY -->
    <string name="home">Home</string>
    <string name="search_message">Find a game…</string>
    <!-- HOME ACTIVITY -->

    <!-- LIKE ACTIVITY -->
    <string name="likes">Likes</string>
    <string name="no_likes_message">You haven\'t liked any content yet.</string>
    <string name="click_message">Click on the heart to add more.</string>
    <!-- LIKE ACTIVITY -->

    <!-- GAME CARD -->
    <string name="price">Price : </string>
    <!-- GAME CARD -->


    <!-- WISH ACTIVITY -->
    <string name="wishlist">Wishlist</string>
    <string name="no_wish_message">You haven\'t add any content in your wish list.</string>
    <string name="click_wish_message">Click on the star to add more.</string>
    <!-- WISH ACTIVITY -->

    <!-- GAME DETAILS -->
    <string name="game_details"> Game details</string>
    <!-- GAME DETAILS -->

    <!-- SEARCH -->
    <string name="search_toolbar">Search</string>
    <string name="no_results">No Results</string>
    <!-- SEARCH -->

</resources>