<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_image"
    android:backgroundTint="@color/background_grey"
    android:backgroundTintMode="multiply"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/password_forgot"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/google_sans_bold"
        android:textSize="35sp"
        android:text="@string/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/password_forgot_message"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/password_forgot"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/google_sans_regular"
        android:textSize="15sp"
        android:text="@string/forgot_password_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/email_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/password_forgot_message"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:paddingTop="15dp"
        android:fontFamily="@font/google_sans_regular"
        android:hint="@string/email_field_forgot_password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:background="@drawable/input_field_background"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/password_forgot_btn"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="50dp"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:fontFamily="@font/google_sans_regular"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@drawable/button_filled_background"
        android:text="@string/forgot_password_btn"
        android:layout_height="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>