<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_image"
        android:backgroundTint="@color/field_background_grey"
        android:backgroundTintMode="multiply"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/register_text"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="90dp"
            android:fontFamily="@font/google_sans_bold"
            android:textSize="35sp"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/login_text"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/register_text"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="60dp"
            android:fontFamily="@font/google_sans_regular"
            android:textSize="15sp"
            android:text="@string/register_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/username_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/login_text"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:paddingTop="15dp"
            android:fontFamily="@font/google_sans_regular"
            android:hint="@string/username_field"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:background="@drawable/input_field_background"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="username"
            android:inputType="text" />

        <EditText
            android:id="@+id/email_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/username_edit_text"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:paddingTop="15dp"
            android:fontFamily="@font/google_sans_regular"
            android:hint="@string/email_field_register"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:background="@drawable/input_field_background"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:paddingTop="15dp"
            android:fontFamily="@font/google_sans_regular"
            android:hint="@string/password_field"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:background="@drawable/input_field_background"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_password_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:paddingTop="15dp"
            android:fontFamily="@font/google_sans_regular"
            android:hint="@string/confirm_password_field"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:background="@drawable/input_field_background"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:inputType="textPassword" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/register_btn"
            app:layout_constraintBottom_toBottomOf="@id/register_btn"
            app:layout_constraintLeft_toLeftOf="@id/register_btn"
            app:layout_constraintRight_toRightOf="@id/register_btn"
            android:indeterminate="true"
            />

        <Button
            android:id="@+id/register_btn"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_edit_text"
            android:layout_marginTop="70dp"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:fontFamily="@font/google_sans_regular"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@drawable/button_filled_background"
            android:text="@string/register_btn"
            android:layout_height="50dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>