<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.like.LikeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".LikeActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/like_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="10dp"
            android:background="@color/background_color"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:paddingTop="10dp"
                android:layout_height="match_parent">
                <View
                    android:id="@+id/toolbar_cross"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="25dp"
                    app:layout_constraintEnd_toStartOf="@+id/toolbar_title"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/close"/>
                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/toolbar_cross"
                    android:fontFamily="@font/google_sans_bold"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/likes"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/like_list"
            android:divider="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            app:layout_constraintTop_toBottomOf="@+id/like_toolbar"
            tools:listitem="@layout/game_card"
            android:visibility="gone"/>

        <View
            android:id="@+id/likes_bg_svg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/empty_likes"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/like_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/no_likes"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/likes_bg_svg"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/google_sans_regular"
            android:text="@string/no_likes_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/click"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/no_likes"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/google_sans_regular"
            android:text="@string/click_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>